[package]
name = "iroh-gossip-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
data-encoding = "2.11.0"
futures-lite = "2.6.1"
iroh = "1.0.0"
iroh-gossip = "0.101.0"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = "1.52.3"
